--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -11,7 +11,7 @@
   
   <link rel="stylesheet" href="css/foundation.css" />
 
-  <link rel="stylesheet" href="css/nfn.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   
 
   <script src="js/vendor/custom.modernizr.js"></script>
