search.html minor cleanup

--- a/_includes/serp.html
+++ b/_includes/serp.html
@@ -1,5 +1,5 @@
 
-<article itemscope="" itemtype="http://schema.org/Article" class="serp row story-container digg-story-el story-10VdTgT hentry entry" data-content-id="10VdTgT" data-contenturl="#" data-position="1" data-tweets="1006" data-fb-shares="15376">
+<article itemscope="" itemtype="http://schema.org/Article" class="serp row" data-content-id="10VdTgT" data-contenturl="#" data-position="1" data-tweets="1006" data-fb-shares="15376">
 
 
       <div class="story-image lazy-image small-3 columns">
