--- a/_sass/modules/search.scss
+++ b/_sass/modules/search.scss
@@ -1,4 +1,4 @@
-.digg-story-el {
+.serp {
   border-bottom: 1px solid #EBEBEB;
   padding-bottom: 19px;
   padding-top: 24px;
@@ -7,7 +7,6 @@
 
 .story-kicker {
   color: #606060;
-  font-family: "lft-etica","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 0.688em;
   font-weight: 700;
   letter-spacing: 1px;
@@ -17,7 +16,6 @@
 
 .story-title {
   color: #232323;
-  font-family: "lft-etica","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1.375em;
   font-weight: bold;
   line-height: 25px;
