--- a/css/modules/search.css
+++ b/css/modules/search.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-.digg-story-el {
+.serp {
   border-bottom: 1px solid #EBEBEB;
   padding-bottom: 19px;
   padding-top: 24px;
@@ -8,7 +8,6 @@
 
 .story-kicker {
   color: #606060;
-  font-family: "lft-etica","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 0.688em;
   font-weight: 700;
   letter-spacing: 1px;
@@ -18,7 +17,6 @@
 
 .story-title {
   color: #232323;
-  font-family: "lft-etica","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1.375em;
   font-weight: bold;
   line-height: 25px;
