Use SASS version of Foundation

--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* normalize.css v2.1.1 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -386,7 +385,7 @@ table {
 
 html,
 body {
-  font-size: 16px;
+  font-size: 100%;
 }
 
 body {
@@ -5635,603 +5634,4 @@ a.th {
 }
 .f-dropdown.large {
   max-width: 800px;
-}
-
-/* General */
-body {
-  /*background: #F6F6F6;*/
-}
-
-.center {
-  text-align: center;
-}
-
-.image-replace {
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-/* Top bar */
-.top-bar {
-  margin-bottom: 0;
-}
-
-/*
-.top-bar-section li a:not(.button) {
-  background: white;
-  line-height: 45px;
-  padding: 0 15px;
-}*/
-.section-header {
-  background: #C80000;
-  margin-bottom: 15px;
-}
-
-.section-header h1 {
-  font-size: 18px;
-  margin: 10px 0;
-  text-transform: uppercase;
-  font-weight: 300;
-}
-
-.section-header h1 a {
-  color: white;
-}
-
-/* TL menu */
-.tl-page {
-  background: #F4FAFC;
-  margin-top: -10px;
-  padding: 20px;
-  position: relative;
-  border-bottom: 1px solid #85A9B8;
-}
-
-.tl-page h2 {
-  text-align: center;
-  clear: both;
-  margin-bottom: 30px;
-}
-
-.tl-page section {
-  text-align: center;
-}
-
-.top-menu {
-  overflow: auto;
-}
-
-.top-menu ul {
-  text-align: center;
-}
-
-.top-menu li {
-  display: inline-block;
-  margin-right: 10px;
-  list-style: none;
-}
-
-.tl-page .story {
-  margin-bottom: 50px;
-}
-
-.top-menu a {
-  color: #0B5472;
-  text-shadow: -1px -1px 0px #ffffff;
-}
-
-.tl-button {
-  background: none repeat scroll 0 0 transparent;
-  border: 1px solid #85A9B8;
-  border-radius: 9px 9px 9px 9px;
-  font-family: Georgia,Times,"Times New Roman",serif;
-  font-size: 17px;
-  font-weight: 400;
-  padding: 15px 21px;
-  text-decoration: none;
-  transition: border-color 0.4s ease 0s;
-  white-space: nowrap;
-}
-
-.tl-button:hover {
-  border-color: #0B5472;
-}
-
-.title-short {
-  text-transform: uppercase;
-  font-weight: normal;
-  font-size: 14px;
-  margin: 0 0 -5px 0;
-}
-
-/* News section */
-.has-background {
-  position: relative;
-}
-
-.background-image {
-  position: absolute;
-}
-
-.overlay {
-  color: white;
-  float: left;
-}
-
-.overlay h1, .overlay p {
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
-  padding: 15px;
-}
-
-.article-grid h1 {
-  font-size: 22px;
-  line-height: 24px;
-  margin: 5px 0;
-}
-
-.top h1 {
-  font-size: 38px;
-  line-height: 40px;
-}
-
-.top {
-  margin-bottom: 20px;
-}
-
-.top .lead {
-  font-size: 18px;
-  line-height: 20px;
-}
-
-.article-grid {
-  padding: 10px 0;
-  border-top: 1px dotted #ddd;
-}
-
-.most-popular {
-  background: #ffffe5;
-}
-
-.small-6.story-promo h1 {
-  font-size: 16px;
-  line-height: 18px;
-}
-
-.small-6.story-promo article {
-  min-height: 198px;
-}
-
-.article-grid img, .top img {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-}
-
-.article-grid p {
-  font-size: 14px;
-  line-height: 16px;
-}
-
-.article-grid p, .top p {
-  color: #999;
-}
-
-.portait {
-  margin-top: 20px;
-  border-top: 1px solid #555;
-}
-
-.portrait h2 {
-  color: white;
-}
-
-/* Series */
-.series-promo {
-  background: #eee;
-  padding-bottom: 15px;
-}
-
-.series-promo h1, .series-promo p {
-  padding: 0 15px;
-}
-
-.series-promo h1 {
-  font-size: 28px;
-  line-height: 30px;
-  text-align: center;
-}
-
-/* Elements */
-.panel ul {
-  padding-left: 20px;
-  font-size: 0.8em;
-}
-
-.panel li {
-  margin-bottom: 10px;
-}
-
-.panel {
-  background: #f6f6f6;
-}
-
-/* Site footer */
-.site-footer {
-  background: #eee;
-  border-top: 1px dotted #999;
-  padding: 25px 0;
-  margin-top: 15px;
-  clear: both;
-}
-
-.the-end {
-  font-size: 12px;
-}
-
-/*blockquote {
-  text-align: center;
-  color: #ed232a;
-  border-left: none;
-  font-family: "Arial Narrow",Arial,sans-serif;
-  font-size: 35px;
-  letter-spacing: 2px;
-  line-height: 38px;
-}
-
-.quotewrap {
-  max-width: 75%;
-  padding: 55px 0 50px;
-  margin: 0 auto;
-}*/
-figcaption {
-  color: #888888;
-  display: block;
-  font-size: 14px;
-  line-height: 1.4em;
-  overflow: auto;
-  border-bottom: 1px solid #E9E9E9;
-  margin-bottom: 10px;
-}
-
-figcaption p {
-  font-weight: 300;
-  letter-spacing: 0;
-  line-height: 1.42857;
-  margin: 10px 0;
-  padding: 0 15px 0 15px;
-}
-
-img {
-  display: block;
-  height: auto;
-  width: 100%;
-}
-
-figure.inline-media {
-  display: block;
-  float: none;
-  margin: 0 auto 20px;
-  max-width: 100%;
-  min-width: 100%;
-}
-
-.inline-media figcaption {
-  padding: 20px;
-  background: #f5f5f5;
-  margin-bottom: 25px;
-  padding: 15px 25px 20px 15px;
-  padding: 20px 20px 30px;
-}
-
-.inline-media p {
-  font-family: "Times New Roman",Times,serif;
-  font-size: 16px;
-  font-style: italic;
-  line-height: 20px;
-  margin: 0;
-  color: #666;
-  margin-top: 4px;
-}
-
-.inline-media .credit {
-  color: #999;
-  font-family: Arial,sans-serif;
-  font-size: 13px;
-  font-style: normal;
-  line-height: 20px;
-  margin-bottom: 3px;
-  margin-top: 0;
-}
-
-.fixed-width {
-  width: auto;
-  display: inline-block;
-  clear: both;
-}
-
-.image {
-  margin: 0 -15px 0 -15px;
-}
-
-.title {
-  color: #3F3F3F;
-  display: block;
-  font-family: 'Helvetica Neue',Arial,freesans,sans-serif;
-  text-decoration: none !important;
-  word-wrap: break-word;
-}
-
-.title-large {
-  font-size: 32px;
-  line-height: 36px;
-}
-
-.lead p {
-  color: #3F3F3F;
-  font-size: 1.2em;
-  line-height: 1.3em;
-  font-weight: 600;
-  margin: 0 0 0.6em;
-}
-
-.meta {
-  border: 1px solid #E9E9E9;
-  font-size: 14px;
-  padding: 12px;
-  margin-bottom: 15px;
-  overflow: auto;
-  background: #ffffe5;
-}
-
-.meta div {
-  padding: 2px 30px 4px 30px;
-  background: url(../img/icon-time.png) 0 0 no-repeat;
-  float: left;
-  margin-bottom: 5px;
-}
-
-.meta .share {
-  background: url(../img/icon-jump.png) 0 0 no-repeat;
-  padding-top: 5px;
-}
-
-.meta .last {
-  margin-bottom: 0;
-}
-
-/* Global footer */
-.global-footer {
-  background-color: #ed232a;
-  border-top: 6px solid #b5000c;
-  color: #fff;
-  font-family: Arial,sans-serif;
-  padding: 0;
-  font-size: 12px;
-  position: relative;
-  text-align: center;
-  width: 100%;
-  margin-top: 20px;
-  padding-top: 20px;
-}
-
-.standard-links {
-  margin: 10px auto;
-}
-
-.standard-links ul {
-  float: none;
-  margin: 0 auto 4px;
-  display: block;
-  font-size: 12px;
-}
-
-.standard-links li {
-  margin: 4px 5px;
-  text-transform: uppercase;
-  display: inline-block;
-}
-
-.standard-links li:nth-child(1) {
-  margin-left: 0;
-}
-
-.global-footer a {
-  color: white;
-}
-
-.nf-logo-white {
-  background: url(../img/nf-logo-light.png);
-  width: 194px;
-  height: 32px;
-}
-
-.links-bar {
-  padding-top: 30px;
-  padding-bottom: 10px;
-}
-
-.final-bar {
-  clear: both;
-  overflow: hidden;
-  background: #c9000d;
-  margin-top: 24px;
-  padding: 20px 60px;
-}
-
-.final-bar ul {
-  font-size: 12px;
-  margin-bottom: 0;
-}
-
-.footer-logo-link {
-  display: inline-block;
-}
-
-/* Author bio */
-.author-bio {
-  background-color: #ccc;
-  background-image: url("http://www.thedailybeast.com/etc/clientlibs/nwglobal/img/article/stripe-pattern-dk.png");
-  background-repeat: repeat;
-  background-position: 0 0;
-  max-width: 390px;
-  padding: 15px;
-  margin: 60px 0;
-  position: relative;
-  text-align: left;
-  display: table;
-}
-
-.author-bio img {
-  float: left;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  width: 62px;
-  height: 62px;
-}
-
-.author-bio h6 {
-  text-transform: uppercase;
-  font-family: "Arial Black",Arial,sans-serif;
-  font-weight: bold;
-  font-size: 12px;
-  font-size: 1.2rem;
-  line-height: 1;
-  margin: 0;
-  padding: 5px 0;
-}
-
-.author-bio p {
-  font-family: arial,sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-  margin-bottom: 0;
-  text-align: left;
-  padding: 0;
-}
-
-.serp {
-  border-bottom: 1px solid #EBEBEB;
-  padding-bottom: 19px;
-  padding-top: 24px;
-  position: relative;
-}
-
-.story-kicker {
-  color: #606060;
-  font-size: 0.688em;
-  font-weight: 700;
-  letter-spacing: 1px;
-  line-height: 12px;
-  margin-bottom: 4px;
-}
-
-.story-title {
-  color: #232323;
-  font-size: 1.375em;
-  font-weight: bold;
-  line-height: 25px;
-  margin: 0 0 4px;
-  width: 370px;
-}
-
-.story-title-link {
-  color: #232323;
-  text-decoration: none;
-}
-
-mark {
-  font-weight: bold;
-}
-
-.story-meta {
-  float: left;
-  margin: 0 0 4px -4px;
-}
-
-.story-meta-item:first-child:before {
-  content: none;
-  margin: 0;
-}
-
-.story-meta-item:before {
-  color: #666666;
-  content: "·";
-  margin: 2px 0 0 -3px;
-  position: absolute;
-}
-
-.story-meta-item {
-  margin-right: 1px;
-  position: relative;
-}
-
-.story-meta-item, .story-meta-item-link {
-  color: #606060;
-  display: inline-block;
-  font-size: 0.75em;
-}
-
-abbr.published:before {
-  color: #666666;
-  content: "·";
-  font-size: 12px;
-  margin: 0 0 0 -7px;
-  position: absolute;
-}
-
-.story-description {
-  clear: both;
-  color: #232323;
-  font-size: 1em;
-  line-height: 1.25em;
-  margin: 0;
-  padding: 0;
-}
-
-@media only screen and (min-width: 48em) {
-  .image {
-    margin: 0;
-  }
-
-  .title-large {
-    font-size: 52px;
-    line-height: 56px;
-  }
-
-  figcaption p {
-    padding: 0;
-  }
-
-  .meta div {
-    margin-bottom: 0;
-  }
-
-  .overlay {
-    max-width: 33%;
-  }
-
-  .global-footer {
-    text-align: left;
-    font-size: 16px;
-  }
-
-  .global-footer .standard-links {
-    margin: 0 auto;
-  }
-
-  figure.inline-media {
-    max-width: 40%;
-    min-width: 40%;
-    margin-left: 25px;
-    float: right;
-  }
-
-  figure.offset {
-    max-width: 80%;
-    min-width: 80%;
-    margin-right: -52.5%;
-  }
-
-  .inline-media figcaption {
-    padding: 20px 20px 30px;
-  }
 }
