--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -1202,7 +1202,7 @@ $default-float: left;
 
 // Background color for the top bar
 
-// $topbar-bg:                            #111 !default;
+$topbar-bg:                            #fff !default;
 
 // Height and margin
 
@@ -1220,18 +1220,18 @@ $default-float: left;
 
 // Style the top bar dropdown elements
 
-// $topbar-dropdown-bg:                   #222;
-// $topbar-dropdown-link-color:           #fff;
+$topbar-dropdown-bg:                   #fff;
+$topbar-dropdown-link-color:           #111;
 // $topbar-dropdown-link-bg:              lighten($topbar-bg, 5%);
 // $topbar-dropdown-toggle-size:          5px;
-// $topbar-dropdown-toggle-color:         #fff;
+$topbar-dropdown-toggle-color:         #111;
 // $topbar-dropdown-toggle-alpha:         0.5;
 
 // Set the link colors and styles for top-level nav
 
-// $topbar-link-color:                    #fff;
-// $topbar-link-color-hover:              #fff;
-// $topbar-link-color-active:             #fff;
+$topbar-link-color:                    #666;
+$topbar-link-color-hover:              #666;
+$topbar-link-color-active:             #666;
 // $topbar-link-weight:                   bold;
 // $topbar-link-font-size:                emCalc(13px);
 // $topbar-link-hover-lightness:          -30%; // Darken by 30%
@@ -1248,8 +1248,8 @@ $default-float: left;
 // $topbar-menu-link-transform:           uppercase;
 // $topbar-menu-link-font-size:           emCalc(13px);
 // $topbar-menu-link-weight:              bold;
-// $topbar-menu-link-color:               #fff;
-// $topbar-menu-icon-color:               #fff;
+$topbar-menu-link-color:               #444;
+$topbar-menu-icon-color:               #444;
 // $topbar-menu-link-color-toggled:       #888;
 // $topbar-menu-icon-color-toggled:       #888;
 
