--- a/css/app.css
+++ b/css/app.css
@@ -3630,7 +3630,7 @@ form.custom .custom.disabled {
 /* Wrapped around .top-bar to contain to grid width */
 .contain-to-grid {
   width: 100%;
-  background: #111111;
+  background: white;
 }
 .contain-to-grid .top-bar {
   margin-bottom: 0;
@@ -3649,7 +3649,7 @@ form.custom .custom.disabled {
   height: 45px;
   line-height: 45px;
   position: relative;
-  background: #111111;
+  background: white;
   margin-bottom: 1.875em;
 }
 .top-bar ul {
@@ -3687,7 +3687,7 @@ form.custom .custom.disabled {
 }
 .top-bar .name h1 a {
   font-weight: bold;
-  color: white;
+  color: #666666;
   width: 50%;
   display: block;
   padding: 0 15px;
@@ -3698,7 +3698,7 @@ form.custom .custom.disabled {
   top: 0;
 }
 .top-bar .toggle-topbar a {
-  color: white;
+  color: #666666;
   text-transform: uppercase;
   font-size: 0.8125em;
   font-weight: bold;
@@ -3720,7 +3720,7 @@ form.custom .custom.disabled {
   height: 34px;
   line-height: 33px;
   padding: 0;
-  color: white;
+  color: #444444;
 }
 .top-bar .toggle-topbar.menu-icon a span {
   position: absolute;
@@ -3728,15 +3728,15 @@ form.custom .custom.disabled {
   display: block;
   width: 16px;
   height: 0;
-  -webkit-box-shadow: 0 10px 0 1px white, 0 16px 0 1px white, 0 22px 0 1px white;
-  box-shadow: 0 10px 0 1px white, 0 16px 0 1px white, 0 22px 0 1px white;
+  -webkit-box-shadow: 0 10px 0 1px #444444, 0 16px 0 1px #444444, 0 22px 0 1px #444444;
+  box-shadow: 0 10px 0 1px #444444, 0 16px 0 1px #444444, 0 22px 0 1px #444444;
 }
 .top-bar.expanded {
   height: auto;
   background: transparent;
 }
 .top-bar.expanded .title-area {
-  background: #111111;
+  background: white;
 }
 .top-bar.expanded .toggle-topbar a {
   color: #888888;
@@ -3758,14 +3758,14 @@ form.custom .custom.disabled {
   width: 100%;
   height: auto;
   display: block;
-  background: #222222;
+  background: white;
   font-size: 16px;
   margin: 0;
 }
 .top-bar-section .divider,
 .top-bar-section [role="separator"] {
-  border-bottom: solid 1px #2b2b2b;
-  border-top: solid 1px black;
+  border-bottom: solid 1px white;
+  border-top: solid 1px #e6e6e6;
   clear: both;
   height: 1px;
   width: 100%;
@@ -3773,16 +3773,16 @@ form.custom .custom.disabled {
 .top-bar-section ul li > a {
   display: block;
   width: 100%;
-  color: white;
+  color: #666666;
   padding: 12px 0 12px 0;
   padding-left: 15px;
   font-size: 0.8125em;
   font-weight: bold;
-  background: #222222;
+  background: white;
 }
 .top-bar-section ul li > a.hover {
-  background: #090909;
-  color: white;
+  background: #f7f7f7;
+  color: #666666;
 }
 .top-bar-section ul li > a.button {
   background: #2ba6cb;
@@ -3810,8 +3810,8 @@ form.custom .custom.disabled {
   background: #970b0e;
 }
 .top-bar-section ul li.active > a {
-  background: #090909;
-  color: white;
+  background: #f7f7f7;
+  color: #666666;
 }
 .top-bar-section .has-form {
   padding: 15px;
@@ -3825,7 +3825,7 @@ form.custom .custom.disabled {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent rgba(255, 255, 255, 0.5);
+  border-color: transparent transparent transparent rgba(17, 17, 17, 0.5);
   border-left-style: solid;
   margin-right: 15px;
   margin-top: -4.5px;
@@ -3858,7 +3858,7 @@ form.custom .custom.disabled {
   margin-bottom: 0;
 }
 .top-bar-section .dropdown li.title h5 a {
-  color: white;
+  color: #666666;
   line-height: 22.5px;
   display: block;
 }
@@ -3882,7 +3882,7 @@ form.custom .custom.disabled {
 
 @media only screen and (min-width: 58.75em) {
   .top-bar {
-    background: #111111;
+    background: white;
     *zoom: 1;
     overflow: visible;
   }
@@ -3912,7 +3912,7 @@ form.custom .custom.disabled {
     top: 8px;
   }
   .top-bar.expanded {
-    background: #111111;
+    background: white;
   }
 
   .contain-to-grid .top-bar {
@@ -3940,10 +3940,10 @@ form.custom .custom.disabled {
   .top-bar-section li a:not(.button) {
     padding: 0 15px;
     line-height: 45px;
-    background: #111111;
+    background: white;
   }
   .top-bar-section li a:not(.button).hover {
-    background: black;
+    background: #b3b3b3;
   }
   .top-bar-section .has-dropdown > a {
     padding-right: 35px !important;
@@ -3954,7 +3954,7 @@ form.custom .custom.disabled {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: rgba(255, 255, 255, 0.5) transparent transparent transparent;
+    border-color: rgba(17, 17, 17, 0.5) transparent transparent transparent;
     border-top-style: solid;
     margin-top: -2.5px;
     top: 22.5px;
@@ -3981,15 +3981,15 @@ form.custom .custom.disabled {
     min-width: 100%;
   }
   .top-bar-section .dropdown li a {
-    color: white;
+    color: #111111;
     line-height: 1;
     white-space: nowrap;
     padding: 7px 15px;
-    background: #1e1e1e;
+    background: white;
   }
   .top-bar-section .dropdown li label {
     white-space: nowrap;
-    background: #1e1e1e;
+    background: white;
   }
   .top-bar-section .dropdown li .dropdown {
     left: 100%;
@@ -3998,14 +3998,14 @@ form.custom .custom.disabled {
   .top-bar-section > ul > .divider, .top-bar-section > ul > [role="separator"] {
     border-bottom: none;
     border-top: none;
-    border-right: solid 1px #2b2b2b;
-    border-left: solid 1px black;
+    border-right: solid 1px white;
+    border-left: solid 1px #e6e6e6;
     clear: none;
     height: 45px;
     width: 0px;
   }
   .top-bar-section .has-form {
-    background: #111111;
+    background: white;
     padding: 0 15px;
     height: 45px;
   }
