--- a/css/modules/article.css
+++ b/css/modules/article.css
@@ -13,6 +13,12 @@
   padding: 55px 0 50px;
   margin: 0 auto;
 }*/
+p {
+  font-family: "Times New Roman", serif;
+  font-size: 1.25em;
+  line-height: 30px;
+}
+
 figcaption {
   color: #888888;
   display: block;
@@ -25,10 +31,12 @@ figcaption {
 
 figcaption p {
   font-weight: 300;
+  font-size: 1em;
   letter-spacing: 0;
   line-height: 1.42857;
   margin: 10px 0;
   padding: 0 15px 0 15px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 img {
@@ -102,6 +110,7 @@ figure.inline-media {
   line-height: 1.3em;
   font-weight: 600;
   margin: 0 0 0.6em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .meta {
@@ -110,7 +119,6 @@ figure.inline-media {
   padding: 12px;
   margin-bottom: 15px;
   overflow: auto;
-  background: #ffffe5;
 }
 
 .meta div {
