--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -149,8 +149,8 @@ $default-float: left;
 
 // $h1-font-size: emCalc(44px);
 // $h2-font-size: emCalc(37px);
-// $h3-font-size: emCalc(27px);
-// $h4-font-size: emCalc(23px);
+$h3-font-size: emCalc(20px);
+// $h4-font-size: emCalc(19px);
 // $h5-font-size: emCalc(18px);
 // $h6-font-size: 1em;
 
