clean up search

--- a/_includes/serp.html
+++ b/_includes/serp.html
@@ -1,12 +1,9 @@
 
-<article itemscope="" itemtype="http://schema.org/Article" class="serp row" data-content-id="10VdTgT" data-contenturl="#" data-position="1" data-tweets="1006" data-fb-shares="15376">
+<article itemscope="" itemtype="http://schema.org/Article" class="serp row">
 
 
       <div class="story-image lazy-image small-3 columns">
-        <a data-content-id="10VdTgT" class="story-link lazy-image-link" style="width:233px;height:127px;" href="http://swampland.time.com/2013/05/23/time-exclusive-obamas-1979-prom-photos/?iid=sl-main-lead">
-          <noscript>
-            &lt;img class="story-image-img" src="http://static.digg.com/images/10VdTgT_1_www_large_thumb.jpeg" width="233" height="127" alt="" /&gt;
-          </noscript>
+        <a class="story-link lazy-image-link" href="#">
 
           <img class="story-image-img lazy-image-img lazy-image-start-index loading-show-spinner-16x16 got-offset" data-src="http://static.digg.com/images/10VdTgT_1_www_large_thumb.jpeg" src="http://static.digg.com/images/10VdTgT_1_www_large_thumb.jpeg" width="233" height="127" alt="">
 
@@ -16,9 +13,9 @@
       <div class="story-content small-9 columns">
         <header class="story-header">
 
-          <div itemprop="alternativeHeadline" class="story-kicker">
+<!--           <div itemprop="alternativeHeadline" class="story-kicker">
             YEARBOOK MESSAGE INCLUDES PHRASE 'FOXY'
-          </div>
+          </div> -->
 
           <h2 itemprop="headline" class="story-title entry-title">
             <a class="story-title-link story-link" rel="bookmark" itemprop="url" href="http://swampland.time.com/2013/05/23/time-exclusive-obamas-1979-prom-photos/?iid=sl-main-lead">
@@ -28,7 +25,7 @@
             <br>
           </h2>
 
-          <div class="story-meta">
+          <!-- <div class="story-meta">
             <span class="story-meta-item story-source">
               <a itemprop="publisher copyrightHolder sourceOrganization provider" class="story-meta-item-link story-source-link" href="/source/swampland.time.com">
 
@@ -42,7 +39,9 @@
             </span>
 
             <abbr class="published story-meta-item story-timestamp" title="2013-05-23 11:07:24"><time datetime="2013-05-23 11:07:24">2w</time></abbr>
-          </div>
+          </div> -->
+
+          
         </header>
         <p itemprop="description" class="story-description entry-content">Kelli Allman / Contact Press Images From left: Greg Orme, Kelli Allman, Barack <mark>Obama</mark> and Megan Hughes CK at Allman’s parents’ house in Honolulu. </p>
       </div>
