--- a/css/modules/misc.css
+++ b/css/modules/misc.css
@@ -215,6 +215,10 @@ body {
   background: #f6f6f6;
 }
 
+.load-more {
+  margin-top: 40px;
+}
+
 /* Site footer */
 .site-footer {
   background: #eee;
