Beginning ads css logic

--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -14,7 +14,9 @@
 
 </head>
 <body>
-
+  <div class="top-wrapper"> 
+    {% include ad-mobile.html %}
+  </div>
   <nav class="top-bar">
       <ul class="title-area">
         <li class="name">
