--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -54,4 +54,5 @@
 @import "modules/misc";
 @import "modules/article";
 @import "modules/search";
+@import "modules/ads";
 @import "modules/responsive";
