--- a/_sass/modules/misc.scss
+++ b/_sass/modules/misc.scss
@@ -19,6 +19,14 @@ body {
   overflow: hidden;
 }
 
+.title {
+  color: #000;
+  display: block;
+  font-family: 'Helvetica Neue',Arial,freesans,sans-serif;
+  text-decoration: none !important;
+  word-wrap: break-word;
+}
+
 
 /* Top bar */
 .top-bar {
@@ -156,7 +164,12 @@ body {
 
 .article-grid {
   padding: 10px 0;
+  margin: 30px 0;
   border-top: 1px dotted #ddd;
+  border-bottom: 1px dotted #ddd;
+  article {
+    min-height: 250px;
+  }
 }
 
 .most-popular {
@@ -208,6 +221,35 @@ body {
   font-size: 28px;
   line-height: 30px;
   text-align: center;
+}
+
+// Article title list
+.article-title-list {
+  margin: 0;
+  padding: 0;
+  li {
+    box-sizing: border-box;
+    background: url(../img/icon-arrow-right.png) right 49% no-repeat;
+    border-bottom: 1px solid #E5E5E5;
+    font-family: "Arial Black",Arial,sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0 18px 0 0;
+    position: relative;
+    a {
+      display: block;
+      padding: 13px 0 10px;
+      color: #000;
+    }
+    a:hover {
+      color: #000;
+    }
+  }
+  .first-item {
+    border-top: 1px solid #E5E5E5;
+  }
 }
 
 /* Elements */
