--- a/css/modules/misc.css
+++ b/css/modules/misc.css
@@ -18,6 +18,14 @@ body {
   overflow: hidden;
 }
 
+.title {
+  color: #000;
+  display: block;
+  font-family: 'Helvetica Neue',Arial,freesans,sans-serif;
+  text-decoration: none !important;
+  word-wrap: break-word;
+}
+
 /* Top bar */
 .top-bar {
   margin-bottom: 0;
@@ -152,7 +160,12 @@ body {
 
 .article-grid {
   padding: 10px 0;
+  margin: 30px 0;
   border-top: 1px dotted #ddd;
+  border-bottom: 1px dotted #ddd;
+}
+.article-grid article {
+  min-height: 250px;
 }
 
 .most-popular {
@@ -204,6 +217,34 @@ body {
   font-size: 28px;
   line-height: 30px;
   text-align: center;
+}
+
+.article-title-list {
+  margin: 0;
+  padding: 0;
+}
+.article-title-list li {
+  box-sizing: border-box;
+  background: url(../img/icon-arrow-right.png) right 49% no-repeat;
+  border-bottom: 1px solid #E5E5E5;
+  font-family: "Arial Black",Arial,sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0 18px 0 0;
+  position: relative;
+}
+.article-title-list li a {
+  display: block;
+  padding: 13px 0 10px;
+  color: #000;
+}
+.article-title-list li a:hover {
+  color: #000;
+}
+.article-title-list .first-item {
+  border-top: 1px solid #E5E5E5;
 }
 
 /* Elements */
