--- a/css/styles.css
+++ b/css/styles.css
@@ -5657,6 +5657,14 @@ body {
   overflow: hidden;
 }
 
+.title {
+  color: #000;
+  display: block;
+  font-family: 'Helvetica Neue',Arial,freesans,sans-serif;
+  text-decoration: none !important;
+  word-wrap: break-word;
+}
+
 /* Top bar */
 .top-bar {
   margin-bottom: 0;
@@ -5791,7 +5799,12 @@ body {
 
 .article-grid {
   padding: 10px 0;
+  margin: 30px 0;
   border-top: 1px dotted #ddd;
+  border-bottom: 1px dotted #ddd;
+}
+.article-grid article {
+  min-height: 250px;
 }
 
 .most-popular {
@@ -5845,6 +5858,34 @@ body {
   text-align: center;
 }
 
+.article-title-list {
+  margin: 0;
+  padding: 0;
+}
+.article-title-list li {
+  box-sizing: border-box;
+  background: url(../img/icon-arrow-right.png) right 49% no-repeat;
+  border-bottom: 1px solid #E5E5E5;
+  font-family: "Arial Black",Arial,sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0 18px 0 0;
+  position: relative;
+}
+.article-title-list li a {
+  display: block;
+  padding: 13px 0 10px;
+  color: #000;
+}
+.article-title-list li a:hover {
+  color: #000;
+}
+.article-title-list .first-item {
+  border-top: 1px solid #E5E5E5;
+}
+
 /* Elements */
 .panel ul {
   padding-left: 20px;
@@ -5892,7 +5933,6 @@ body {
   margin: 0 auto;
 }*/
 p {
-  font-family: "Times New Roman", serif;
   font-size: 1.25em;
   line-height: 30px;
 }
@@ -5969,14 +6009,6 @@ figure.inline-media {
   margin: 0 -15px 0 -15px;
 }
 
-.title {
-  color: #3F3F3F;
-  display: block;
-  font-family: 'Helvetica Neue',Arial,freesans,sans-serif;
-  text-decoration: none !important;
-  word-wrap: break-word;
-}
-
 .title-large {
   font-size: 32px;
   line-height: 36px;
@@ -5989,6 +6021,10 @@ figure.inline-media {
   font-weight: 600;
   margin: 0 0 0.6em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.body-content p {
+  font-family: "Times New Roman", serif;
 }
 
 .meta {
