--- a/_sass/modules/misc.scss
+++ b/_sass/modules/misc.scss
@@ -27,6 +27,50 @@ body {
   word-wrap: break-word;
 }
 
+.section-heading {
+  text-transform: uppercase;
+  // color: #333;
+}
+
+.col-heading {
+  text-transform: uppercase;
+}
+
+.front-section {
+  margin: 30px 0;
+}
+
+.section-heading + span {
+  margin: -10px 0 20px 0;
+  color: #444;
+  font-family: "Times New Roman", serif;
+  font-style: italic;
+  font-size: 24px;
+  line-height: 24px;
+  display: block;
+}
+
+// .divider:after {
+//   background: none repeat scroll 0 0 #000000;
+//   bottom: 0;
+//   content: " ";
+//   height: 5px;
+//   left: 0;
+//   margin: 0 auto;
+//   position: absolute;
+//   right: 0;
+//   width: 25px;
+// }
+
+.image-round {
+  border-radius: 160px;
+}
+
+// .grid-teaser {
+//   border-bottom: 5px solid #000000;
+//   margin-bottom: 30px;
+// }
+
 
 /* Top bar */
 .top-bar {
